Question1/front-end-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1 
  selector:
    matchLabels:
        app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-gcr-app
        image: gcr.io/google_samples/gb-frontend:v5
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: demo-app
spec:
  type: ClusterIP 
  ports:
  - port: 80
  selector:
    app: demo-app
