Question1/redis_leader-pv.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-leader
  labels:
    app: redis
    role: leader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        role: leader
    spec:
      containers:
      - name: leader
        image: "docker.io/redis:6.0.5"
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-pv
          mountPath: /data
      volumes:
      - name: redis-pv
        persistentVolumeClaim:
          claimName: redis-pv-claim        
---

apiVersion: v1
kind: Service
metadata:
  name: redis-leader
  labels:
    app: redis
    role: leader
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    role: leader
---
