Question1/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules
spec:
  ingressClassName: nginx-example
  defaultBackend:
    service:
      name: webapp
      port:
        number: 80
